--- a/assets/icons/icomoon/style.css
+++ b/assets/icons/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4x3fui');
-  src:  url('fonts/icomoon.eot?4x3fui#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4x3fui') format('truetype'),
-    url('fonts/icomoon.woff?4x3fui') format('woff'),
-    url('fonts/icomoon.svg?4x3fui#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?fj34jl');
+  src:  url('fonts/icomoon.eot?fj34jl#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?fj34jl') format('truetype'),
+    url('fonts/icomoon.woff?fj34jl') format('woff'),
+    url('fonts/icomoon.svg?fj34jl#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,27 +24,45 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-user:before {
-  content: "\e900";
+.icon-cancel:before {
+  content: "\e903";
 }
 .icon-chat:before {
-  content: "\e901";
+  content: "\e900";
 }
 .icon-bubbles:before {
-  content: "\e901";
+  content: "\e900";
 }
 .icon-talk:before {
-  content: "\e901";
+  content: "\e900";
 }
 .icon-message:before {
-  content: "\e901";
+  content: "\e900";
 }
 .icon-conversation:before {
+  content: "\e900";
+}
+.icon-check:before {
   content: "\e901";
+}
+.icon-bubble2:before {
+  content: "\e96e";
 }
 .icon-search:before {
   content: "\e986";
 }
 .icon-menu:before {
   content: "\e9bd";
+}
+.icon-cross:before {
+  content: "\ea0f";
+}
+.icon-checkmark:before {
+  content: "\ea10";
+}
+.icon-pinterest:before {
+  content: "\ead1";
+}
+.icon-user:before {
+  content: "\e902";
 }
